--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # vagy egy másik operációs rendszer, ha szükséges
+    runs-on: ubuntu-latest  # Választhatsz más operációs rendszert is, ha szükséges
 
     steps:
     - name: Checkout repository
@@ -19,18 +19,13 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.9'  # állítsd be a kívánt Python verziót
+        python-version: '3.9'  # Állítsd be a kívánt Python verziót
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt  # Feltételezve, hogy van requirements.txt fájl
 
-    - name: Run tests
+    - name: Run tests with unittest
       run: |
-        python -m unittest discover  # Ha unittestet használsz teszteléshez
-
-    - name: Check for code quality
-      run: |
-        pylint square.py  # Ha pylint-tel ellenőrzöd a kódot
-
+        python -m unittest discover -s tests  # A teszt mappa futtatása, ha van
