--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # Választhatsz más operációs rendszert is, ha szükséges
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
@@ -19,13 +19,15 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.9'  # Állítsd be a kívánt Python verziót
+        python-version: '3.9'  # Vagy amit használsz
 
-    - name: Install dependencies
+    - name: Install dependencies (dev)
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Feltételezve, hogy van requirements.txt fájl
+        pip install -r dev-requirements.txt  # dev requirements telepítése (Flask + pytest + pylint)
 
-    - name: Run tests with unittest
+    - name: Run tests
       run: |
-        python -m unittest discover -s tests  # A teszt mappa futtatása, ha van
+        python -m unittest discover -s tests
+
+    # Itt tudod később hozzáadni a deploy lépéseket, ha akarod
